Adicionar VehicleUse Resource, Sem validação de veículo em uso
